# caliburn

./: .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.pi/: settings.json
.pi/extensions/rag-writer/: SKILL.md  index.ts
.pi/skills/design-controller/: SKILL.md
.pi/skills/design-observer/: SKILL.md
.pi/skills/explain-concept/: SKILL.md
.pi/skills/new-project/: SKILL.md
.pi/skills/validate-implementation/: SKILL.md
knowledge/: index.md
knowledge/control-theory/: index.md  stability.md  state-space.md  trajectory-planning.md
knowledge/control-theory/controllers/: index.md  lqr.md  pid.md
knowledge/control-theory/observers/: extended-kalman.md  index.md  kalman-filter.md
knowledge/math/: index.md
knowledge/math/linear-algebra/: eigenvalues.md  index.md  matrix-operations.md  state-space-transforms.md
knowledge/math/numerical-methods/: index.md  interpolation-techniques-in-numerical-methods.md
knowledge/math/probability/: index.md
knowledge/math/transforms/: homogeneous-transforms.md  index.md
knowledge/rendering/: index.md  opengl-pipeline.md
knowledge/simulation/: fixed-timestep.md  index.md  rk4.md  sim-loop.md  variable-vs-fixed.md
knowledge/simulation/architecture/: index.md  simulation-engine-patterns.md
knowledge/simulation/contact-physics/: index.md  rolling-dynamics.md
knowledge/simulation/rigid-body/: constraints-and-joints.md  equations-of-motion.md  index.md  inertia-tensors.md  quaternion-rotation.md  servo-modelling.md
reference/: CMakeLists.txt  README.md
reference/controllers/: lqr.cpp  lqr.h  pid.cpp  pid.h  test_lqr.cpp  test_pid.cpp  test_trajectory_planner.cpp  trajectory_planner.cpp  trajectory_planner.h
reference/integrators/: rk4.cpp  rk4.h  test_rk4.cpp
reference/math/: homogeneous_transform.cpp  homogeneous_transform.h  test_homogeneous_transform.cpp
reference/observers/: kalman_filter.cpp  kalman_filter.h  test_kalman.cpp
reference/rendering/: imgui_setup.cpp  implot_helpers.cpp
reference/simulation/: constraint_enforcer.cpp  constraint_enforcer.h  fixed_timestep.cpp  fixed_timestep.h  interfaces.h  rolling_dynamics.cpp  rolling_dynamics.h  servo_model.cpp  servo_model.h  sim_loop.cpp  sim_loop.h  test_constraint_enforcer.cpp  test_fixed_timestep.cpp  test_rolling_dynamics.cpp  test_servo_model.cpp  test_sim_loop.cpp
tools/rag/: ingest.ts
tools/rag/lib/: book-state.ts  pdf-extract.ts
tools/rag/sources/: fedorov-numerical-methods.md  kreyszig-aem.md  kuipers-quaternions.md  rigid-body-dynamics.md  simon-optimal-state.md
tools/rag/systemd/: caliburn-rag.service  caliburn-rag.timer  install.sh
